# quran-muaalem

./: .gitignore  README.md  gradio_app.py  gradio_app_v2.py  pyproject.toml  requirements.txt
.gradio/flagged/: dataset1.csv
assets/test_cache/: test.pt
src/: fastapi_server.py
src/quran_muaalem/: __init__.py  decode.py  explain.py  explain_gradio.py  gradio_app.py  inferece.py  inference.py  muaalem_typing.py
src/quran_muaalem/modeling/: vocab.py
tests/: modules_pytest.py  run_sliding_window_fatihah.py  run_sliding_window_sliding_window.py  test_api_websocket.py  test_modules.py  test_muaalem_infrence.py
