# main docs of setup tools: https://setuptools.pypa.io/en/latest/userguide/quickstart.html
# pypip tutoral: https://packaging.python.org/en/latest/tutorials/packaging-projects/
# Video Tutorial: https://www.youtube.com/watch?v=v6tALyc4C10
[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
license = "MIT"
name = "quran-muaalem"
version = "0.0.1"
authors = [
  { name="Abdullah", email="abdullahamlyossef@gmail.com" },
]
description = "Quran Phonetic Script with addional quarnic utils"
readme = "README.md"
dependencies = [
    "numpy>=2.2.6",
    "quran-transcript>=0.0.2",
    "torch>=2.7.0",
    "transformers>=4.55.0",
]
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: OS Independent",
]


# Optional dependencies
[project.optional-dependencies]

test = [
  "pytest",
]

[project.urls]
Homepage = "https://github.com/obadx/quran-muaalem"
Issues = "https://github.com/obadx/quran-muaalem/issues"

# for addint data: https://setuptools.pypa.io/en/latest/userguide/datafiles.html#package-data
# [tool.setuptools.package-data]
# quran_transcript = ["quran-script/*"]
